\name{NEWS}
\title{NEWS file for the \pkg{Uniquorn} bioconductor package }
\section{Changes in version 0.99.16 [2016-05-04]}{
    \subsection{Further minor update of statistics module}{
        \itemize{
            \item Further minor fixes to statistics
        }
    }
}
\section{Changes in version 0.99.15 [2016-05-03]}{
    \subsection{Minor Update of statistics}{
        \itemize{
            \item Minor fixes to statistics
        }
    }
}
\section{Changes in version 0.99.14 [2016-05-03]}{
    \subsection{Major Update of statistics}{
        \itemize{
            \item Replaced the absolute and relative cutoff with a p an q-value based on a binomial distribution
        }
    }
}
\section{Changes in version 0.99.13 [2016-04-08]}{
    \subsection{Fixed unit tests}{
        \itemize{
            \item Further update test suite
        }
    }
}
\section{Changes in version 0.99.12 [2016-04-08]}{
    \subsection{Fixed unit tests}{
        \itemize{
            \item Update testing suite
        }
    }
}
\section{Changes in version 0.99.11 [2016-04-01]}{
    \subsection{Fixed unit tests}{
        \itemize{
            \item Fixed error in unit tests
        }
    }
}
\section{Changes in version 0.99.10 [2016-03-30]}{
    \subsection{Added Unit tests}{
        \itemize{
            \item Added Unit test feature
        }
    }
}
\section{Changes in version 0.99.9 [2016-03-29]}{
    \subsection{Improved documentation}{
        \itemize{
            \item Minor documentation bugfixes.
        }
    }
}
\section{Changes in version 0.99.8 [2016-03-25]}{
    \subsection{Fixed Bug}{
        \itemize{
            \item General bugfixing.
        }
    }
}
\section{Changes in version 0.99.7 [2016-03-24]}{
    \subsection{Fixed Bug}{
        \itemize{
            \item Minor bugfix concerning output of CL identifications.
        }
    }
}
\section{Changes in version 0.99.6 [2016-03-23]}{
    \subsection{Fixed Bug}{
        \itemize{